make logo white, fix mobile layout issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,6 +22,10 @@ header {
 	margin: 0 auto;
 }
 
+.logo-sg-text {
+	color: #f5f5f5;
+}
+
 .logo-sg {
 	height: 1em;
 	display: inline-block;
@@ -68,6 +72,8 @@ section.blue {
 
 .screenshot + .screenshot-area {
 	padding-top: 30%;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 section.black {
